Fixes misaligned search field and button on product filter block. Ticket DT-1268

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -58,7 +58,7 @@ section.main {
    CUSTOM CSS
    =============================== */
 
-// Wrapper 
+// Wrapper
 .wrapper {
     width: 90%;
     margin: 0 5%;
@@ -198,7 +198,7 @@ footer.bk-footer p {
   color: @font-swatch6-color;
   line-height:@font-swatch6-line-height;
   letter-spacing: @font-swatch6-letter-spacing;
-  
+
 }
 
 .widget.extendednavigation ul li a:hover {
@@ -246,7 +246,7 @@ footer.bk-footer p {
 
 .widget.extendednavigation li:hover > ul > li > a .text {
   margin-left: 0;
-  
+
 }
 
 .widget.extendednavigation li:hover > ul > li > a .text:hover {
@@ -317,7 +317,7 @@ footer.bk-footer p {
      -moz-border-radius: 5px;
           border-radius: 5px;
   box-shadow: 0 0 0 3px rgba(0,0,0,0.1);
-  
+
 
   font-family: @font-swatch7-font-family;
   font-size: @font-swatch7-font-size;
@@ -328,7 +328,7 @@ footer.bk-footer p {
   background-color: @font-swatch7-background-color;
 }
 
-.widget.feature button:hover 
+.widget.feature button:hover
 {
   background-color: darken(@color-swatch3,5%);
   cursor: pointer;
@@ -440,12 +440,12 @@ footer.bk-footer p {
 
 // General
 .widget.button button,
-button.btn, 
-.widget.profile form button, 
-.contactform button.btn, 
+button.btn,
+.widget.profile form button,
+.contactform button.btn,
 .btn,
-.widget.dropbox button, 
-.checkout-order-button, 
+.widget.dropbox button,
+.checkout-order-button,
 .checkout-empty-link,
 .widget.tweet a,
 .widget.paypalbuynow .widget.button.paypal,
@@ -568,7 +568,7 @@ button.btn,
     font-weight: @font-swatch4-font-weight;
     font-size: @font-swatch4-font-size;
     text-align: center;
-    
+
     line-height: @font-swatch4-line-height;
 }
 
@@ -886,9 +886,9 @@ hr.line.align-right {
     text-decoration: none;
     letter-spacing: 1px;
     text-shadow: 0 1px 0px rgba(0,0,0,0.3);
-    
+
 }
-  
+
 .widget.contactform fieldset button.btn:hover {
   background-color: darken(@color-swatch3,5%);
   cursor: pointer;
@@ -1134,7 +1134,7 @@ footer.bk-footer .footer.bk-footer2 .widget.profile form {
     -moz-border-radius: 3px;
     border-radius: 3px;
     box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
-    
+
     text-decoration: none;
     text-shadow: 0 1px 0px rgba(0,0,0,0.2);
 }
@@ -1480,7 +1480,7 @@ footer.bk-footer .footer.bk-footer2 .widget.profile form {
                 max-width: 100%!important;
             }
         }
-        @media (max-width: 360px) { 
+        @media (max-width: 360px) {
             max-width: 100%;
         }
     }
@@ -1544,7 +1544,7 @@ footer.bk-footer .footer.bk-footer2 .widget.profile form {
                 outline: none;
             }
         }
-    }   
+    }
     // Table
     table {
         margin: 20px 0 30px;
@@ -1643,7 +1643,7 @@ footer.bk-footer .footer.bk-footer2 .widget.profile form {
             background-color: @color-swatch3;
         }
     }
-    // 
+    //
     .js-shipping-opts {
         border-bottom: 1px solid darken(@color-swatch1,10%);
         padding-bottom: 20px;
@@ -1860,7 +1860,7 @@ footer.bk-footer .footer.bk-footer2 .widget.profile form {
     margin-bottom: 10px;
 }
 
-// Price 
+// Price
 .standard-price {
     color: @font-swatch4-color;
     font-family: @font-swatch4-font-family;
@@ -1886,7 +1886,7 @@ footer.bk-footer .footer.bk-footer2 .widget.profile form {
    IPAD WIDTH
    =============================== */
 
-@media only screen and (max-width: 768px) {
+@media @tablet {
 
   .widget.companyheader {
     width: 100%;
@@ -1903,7 +1903,7 @@ footer.bk-footer .footer.bk-footer2 .widget.profile form {
   }
 
   /* NAV */
-  
+
 .widget .extendednavigation ul {
     border-top: 1px solid @color-swatch2;
     padding-top: 0;
@@ -1981,7 +1981,7 @@ footer.bk-footer .footer.bk-footer2 .widget.profile form {
   /* FEATURE */
 
    .widget.feature .feature-bgimg {
-    height: 300px; 
+    height: 300px;
     }
 
   .widget.feature .content {
@@ -2004,7 +2004,7 @@ footer.bk-footer .footer.bk-footer2 .widget.profile form {
   }
     /* SLIDESHOW */
 
-    .widget.responsiveslideshow .slideshow-image-list, 
+    .widget.responsiveslideshow .slideshow-image-list,
     .widget.responsiveslideshow .slideshow-widget {
         height:350px;
     }
@@ -2019,7 +2019,7 @@ footer.bk-footer .footer.bk-footer2 .widget.profile form {
    IPHONE WIDTH
    =============================== */
 
-@media only screen and (max-width: 480px) {
+@media @mobile {
 
   /* COMPANY HEADER */
   .widget.companyheader .company-name h1 {
@@ -2073,7 +2073,7 @@ footer.bk-footer .footer.bk-footer2 .widget.profile form {
         -moz-border-radius: 3px;
         border-radius: 3px;
         box-shadow: inset 0 2px 2px rgba(255, 255, 255, 0.2);
-        
+
         text-decoration: none;
         text-shadow: 0 1px 0px rgba(0,0,0,0.2);
     }
